feat: bulk operation and full service unit tests